# NAIS

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md
.github/workflows/: release.yml
chanserv/: Cargo.toml  README.md  chanserv.toml.example  deploy.sh
chanserv/deploy/: config.toml  install.sh  nais-chanserv.service  remote-install.sh
chanserv/src/: main.rs
convey/: Cargo.toml  README.md  convey.toml.example  deploy.sh
convey/deploy/: apache-convey-proxy.conf  config.toml  convey-images.service  install.sh  nginx-convey.conf
convey/src/: main.rs
docs/: NAIS_SECURE_CHANNELS_ARCHITECTURE.md
ircd/: Cargo.toml  ircd.toml.example
ircd/deploy/: config.toml
ircd/src/: commands.rs  config.rs  connection.rs  houses.rs  main.rs  permissions.rs  protocol.rs  server.rs  state.rs
relay-hub/: Cargo.toml  README.md
relay-hub/src/: main.rs
scs/: Cargo.toml  README.md  deploy.sh  scs.toml.example
scs/deploy/: config.toml  install.sh  nais-scs.service  remote-install.sh
scs/src/: main.rs
src/: console.rs  irc_client.rs  main.rs  nais_channel.rs  nais_secure_channel.rs  nsc_channel.rs  nsc_crypto.rs  nsc_irc.rs  nsc_manager.rs  nsc_mls.rs  nsc_nat.rs  nsc_router.rs  nsc_transport.rs  profile.rs  ui.rs  voice_chat.rs
website/: .htaccess  convey-images.html  index.html  style.css
