[workspace]
members = [".", "relay-hub"]
resolver = "2"

[package]
name = "nais_client"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop", "dep:rfd", "dep:arboard"]
mobile = ["dioxus/mobile"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "io-util", "net"] }
irc = "0.15"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
dioxus = "0.7"
async-channel = "2"
futures = "0.3"
futures-timer = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = "0.4"
reqwest = { version = "0.12", features = ["multipart", "json"] }
scraper = "0.25"
lazy_static = "1.5"
url = "2"
image = "0.25"
base64 = "0.22"

# Desktop-only dependencies
rfd = { version = "0.17", optional = true }
arboard = { version = "3.6", optional = true }

# Voice chat dependencies
opus = "0.3"
cpal = "0.15"

# Audio noise filtering
nnnoiseless = "0.5"
biquad = "0.4"

# NAT traversal
igd-next = "0.15"
tao = { version = "0.34.5", default-features = false }

# Cryptography for secure channels
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
thiserror = "1"
hex = "0.4"

# TURN authentication
md5 = "0.7"
hmac = "0.12"
sha1 = "0.10"

# QUIC Transport
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.13"
bytes = "1"
