[package]
name = "nais-relay-hub"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "NSC Relay Hub - Federation hub for Nais Secure Channels"

[[bin]]
name = "relay-hub"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "io-util", "net", "sync"] }

# QUIC transport
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.13"
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto
sha2 = "0.10"
hex = "0.4"

# Utilities
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
dashmap = "6"
